@@ -126,6 +126,9 @@ Build
 Windows
 -------
 
+- Issue #17717: The Windows build scripts now use a copy of NASM pulled from
+  svn.python.org to build OpenSSL.
+
 - Issue #22644: The bundled version of OpenSSL has been updated to 1.0.1j.
 
 What's New in Python 3.4.2?
